objects/Branch__c.object
<CustomObject>
    <description>This stores Branch details.</description>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <externalId>true</externalId>
        <label>Branch Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Branch_Email_ID__c</fullName>
        <label>Branch Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Branch_Mode__c</fullName>
        <label>Branch Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FINO</fullName>
                </value>
                <value>
                    <fullName>TCBIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_Record_Name_Label_and_Format__c</fullName>
        <label>Branch Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Matured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Branch</label>
    <nameField>
        <label>Owner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>